# ink_document_management

./: .gitignore  Cargo.toml  README.md  lib.rs
.github/workflows/: rust.yml  test_unit_test.yml
accounts_management/document_acounts_v1/: Cargo.toml  lib.rs
accounts_management/document_acounts_v1/traits/: Cargo.toml  lib.rs
accounts_management/document_acounts_v2/: lib.rs
dns/dns/: Cargo.toml  README.md  lib.rs
dns/dns/tests/: e2e_tests.rs  unit_tests.rs
docs_support/: Cargo.toml  README.md  lib.rs
document_acounts/: Cargo.toml  README.md  lib.rs
document_acounts/proxy/: Cargo.toml  lib.rs
document_acounts/tests/: e2e_tests.rs  unit_tests.rs
document_management/: Cargo.toml  lib.rs
document_management/tests/: e2e_tests.rs  unit_tests.rs
document_storage/: Cargo.toml  README.md
document_storage/tests/: e2e_tests.rs  unit_tests.rs
permission_control/: Cargo.toml  lib.rs
permisson_control/: Cargo.toml  lib.rs
permisson_control/tests/: e2e_tests.rs  unit_tests.rs
proxy/: lib.rs
