[package]
name = "document_acounts"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
docs_support = {path = "../docs_support/", default-features = false}
[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"
name = "document_store_contract"
[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "docs_support/std"
]
ink-as-dependency = []
e2e-tests = []
